-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: hotspot
-
b13
-
s390x
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8224469 | 11.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
Currently the os::get_summary_cpu_info on linux-s390 gives bad/broken output.
It parses /proc/cpuinfo for a CPU description string.
It runs into the 2nd line :
more /proc/cpuinfo
vendor_id : IBM/S390
# processors : 6
and gives output "s : 6" which is completely misleading.
It parses /proc/cpuinfo for a CPU description string.
It runs into the 2nd line :
more /proc/cpuinfo
vendor_id : IBM/S390
# processors : 6
and gives output "s : 6" which is completely misleading.
- backported by
-
JDK-8224469 linux-s390 : os::get_summary_cpu_info gives bad output
-
- Resolved
-