8220781: linux-s390 : os::get_summary_cpu_info gives bad output

Reviewed-by: dholmes, lucy